--- a/IndiGO Clone/index.html
+++ b/IndiGO Clone/index.html
@@ -29,6 +29,9 @@
         </div>
     </header>
     <h1 id="tagline">Hi there, where would you like to <span style="color: #209326;">IndiGo</span> today?</h1>
+    <div id="errorListContainer" class="error-list-container">
+        <ul id="errorList"></ul>
+    </div>
     <section id="travel-form">
         <div class="form-wrapper">
             <div class="flight-hotel-form">
@@ -103,9 +106,6 @@
                             <button id="promoCode">+ <u>ADD PROMOCODE</u></button>
                             <button id="searchFlight" type="submit">Search</button>
                         </div>
-                    </div>
-                    <div id="errorPopup" class="error-popup">
-                        <p id="errorMessage"></p>
                     </div>
                 </form>
             </div>
