--- a/IndiGO Clone/index2.html
+++ b/IndiGO Clone/index2.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Second Page</title>
 </head>
-<body>
+<body background="/images/bgImg.png" style="background-repeat: no-repeat; background-size: cover;">
     <header>
-        <h1>Second Page</h1>
+        <h1 style="text-align: center;">Second Page</h1>
     </header>
 </body>
 </html>
